--- a/Segundo Año/Integración de Aplicaciones/nuevaApi/package.json
+++ b/Segundo Año/Integración de Aplicaciones/nuevaApi/package.json
@@ -13,7 +13,9 @@
     "babel": "^6.23.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "escape-string-regexp": "^5.0.0",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "morgan": "^1.10.0",
     "mysql2": "^3.3.0",
     "nodemon": "^2.0.22"
