--- a/Segundo Año/ionicApp/package.json
+++ b/Segundo Año/ionicApp/package.json
@@ -22,6 +22,7 @@
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "firebase": "^10.3.1",
+    "firebase-admin": "^11.10.1",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
