--- a/Segundo Año/Laboratorio FS II/prime_royect/package.json
+++ b/Segundo Año/Laboratorio FS II/prime_royect/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "proyect_prime",
+  "name": "prime_royect",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,11 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "primeicons": "^6.0.1",
     "primereact": "^10.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
