--- a/Segundo Año/Laboratorio FS II/prime_royect/package.json
+++ b/Segundo Año/Laboratorio FS II/prime_royect/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "fs": "^0.0.1-security",
+    "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^10.0.3",
     "react": "^18.2.0",
