--- a/Segundo Año/Programacion_Frontend/TP-backendFront/practica_socket/package.json
+++ b/Segundo Año/Programacion_Frontend/TP-backendFront/practica_socket/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "api-users",
+  "name": "practica_socket",
   "version": "1.0.0",
-  "description": "Api Rest con Sequelize",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mysql": "^2.18.1",
-    "mysql2": "^3.6.1",
-    "sequelize": "^6.33.0",
+    "morgan": "^1.10.0",
     "socket.io": "^4.7.2"
   }
 }
