--- a/Segundo Año/Programacion_Frontend/TP-backendFront/MyNet2/vite-project/package.json
+++ b/Segundo Año/Programacion_Frontend/TP-backendFront/MyNet2/vite-project/package.json
@@ -16,6 +16,7 @@
     "primereact": "^10.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
