--- a/Segundo Año/Programacion_Frontend/TP-backendFront/MyNet2/vite-project/package.json
+++ b/Segundo Año/Programacion_Frontend/TP-backendFront/MyNet2/vite-project/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.1",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
